--- a/Project 3 Code.ipynb
+++ b/Project 3 Code.ipynb
@@ -990,6 +990,156 @@
    "source": [
     "rmse"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dedf2bf-f377-48f0-8117-4c792adbc429",
+   "metadata": {},
+   "source": [
+    "## Experiment 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83489d55-533f-4ab6-8f85-c0ae3a0051d4",
+   "metadata": {},
+   "source": [
+    "### Import / set-up"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "28e7b95b-98fc-42c4-be05-fa98669ad612",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_selection import RFE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "fec13e24-2fad-4b80-a09d-31e677fe3129",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50ca4a91-5723-4344-9bd0-4d91a7dcca98",
+   "metadata": {},
+   "source": [
+    "### Initialize Ridge Regression with the best alpha from prev. experiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "bdcfd451-54df-4052-99c9-22d3e6b1820d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ridge_model = Ridge(alpha=100.0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66d488ae-7bf5-4409-8406-994fe7ba57ff",
+   "metadata": {},
+   "source": [
+    "### Applying RFE to select the most important features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "59dad675-6dbf-41d0-8d36-44928c151fb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rfe = RFE(estimator=ridge_model, n_features_to_select=5)\n",
+    "X_rfe = rfe.fit_transform(X_scaled, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a68abdcb-332b-4937-8a7c-3021e9a037bd",
+   "metadata": {},
+   "source": [
+    "### Train-test split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "610700d6-78dd-4378-96c2-5a2f07f6b611",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_rfe, X_test_rfe, y_train_rfe, y_test_rfe = train_test_split(X_rfe, y, test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d34e06a6-4491-42b2-8432-da99fbed9ba2",
+   "metadata": {},
+   "source": [
+    "### Model Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "37fa81cc-b537-4133-8d23-26d854aad9b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ridge_model.fit(X_train_rfe, y_train_rfe)\n",
+    "y_pred_rfe = ridge_model.predict(X_test_rfe)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c724bd5-2d14-4395-a426-c785552e2d84",
+   "metadata": {},
+   "source": [
+    "### Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "f5b02e1e-7fa7-4a69-b234-e741e52d8e5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rmse_rfe = np.sqrt(mean_squared_error(y_test_rfe, y_pred_rfe))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "959fdf5b-fec0-47ad-a1ed-5f5434ed2715",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3887902455460189"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rmse_rfe"
+   ]
   }
  ],
  "metadata": {
